Исправление ошибок для прохождения postman тестов API пайплайна